# saiki_cmake_c_demo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  app-clean.sh  app-debug.sh  app-release.sh
src/: CMakeLists.txt
src/util/: CMakeLists.txt
src/util/inc/: util.h
src/util/src/: util.c
